--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,5 +7,5 @@
     <string name="showBirthdays">Показать дни рождения</string>
     <string name="title_login">Войти</string>
     <string name="title_logout">Выйти</string>
-    <string name="total_likes">Всего лайков = </string>
+    <string name="total_likes">"Всего лайков = "</string>
 </resources>
