--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="title_logout">Logout</string>
     <string name="refresh">Refresh</string>
     <string name="back">Back</string>
-    <string name="total_likes">Total likes = </string>
+    <string name="total_likes">"Total likes = "</string>
 </resources>
